sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  var nbVal = getNombreValeurs()
  var i = 0
  
  
  while(i<(nbVal-1)){
    if(!plusPetit(i,i+1)){
      echange(i,i+1)
      i-=1
      if(i=0) i=1
      
    }else{
      i+=1
    }
    
    
  }
  
  
}